--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>ClientSide</title>
-    <base href="https://skclusive.github.io/Skclusive.Mobx.Component/demo/dist/" />
+    <base href="https://skclusive.github.io/Skclusive.Mobx.Component/" />
     <link href="./css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="./css/site.css" rel="stylesheet" />
 </head>
