--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>ClientSide</title>
+    <title>Counter App</title>
     <base href="https://skclusive.github.io/Skclusive.Mobx.Component/" />
     <link href="./css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="./css/site.css" rel="stylesheet" />
